Added GUI for gifts and action history. Client side support for notifications and user blocking. New design for the profile page. New caching and image loading method (now using an external library) Cleaned up lots of old files.